hphp/hack/test/typecheck/lambda/variadics/variadic_method_not_found.php.exp
File "variadic_method_not_found.php", line 19, characters 21-23:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 10, characters 36-36:
  This is why I think it is an object of type D
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 25, characters 21-23:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 24, characters 19-20:
  This is why I think it is an object of type D (variadic argument)
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 29, characters 38-40:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 10, characters 36-36:
  This is why I think it is an object of type D
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 31, characters 40-42:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 31, characters 25-26:
  This is why I think it is an object of type D (variadic argument)
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 36, characters 35-37:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 36, characters 20-21:
  This is why I think it is an object of type D (variadic argument)
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 44, characters 19-21:
No instance method `foo` in `D` (Typing[4053])
  File "variadic_method_not_found.php", line 5, characters 19-21:
  Did you mean `bar` instead?
  File "variadic_method_not_found.php", line 43, characters 29-30:
  This is why I think it is an object of type D (variadic argument)
  File "variadic_method_not_found.php", line 3, characters 7-7:
  Declaration of `D` is here
File "variadic_method_not_found.php", line 33, characters 25-29:
Was expecting an object but type is unknown (Typing[4297])
  File "variadic_method_not_found.php", line 33, characters 17-18:
  It is unknown because a type could not be determined here
File "variadic_method_not_found.php", line 39, characters 12-16:
Was expecting an object but type is unknown (Typing[4297])
  File "variadic_method_not_found.php", line 38, characters 27-28:
  It is unknown because a type could not be determined here
